syntax = "proto3";
package babylon.epoching.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/babylonlabs-io/babylon/v4/x/epoching/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.equal) = true;

  // epoch_interval is the number of consecutive blocks to form an epoch
  uint64 epoch_interval = 1
      [ (gogoproto.moretags) = "yaml:\"epoch_interval\"" ];
  
   // enqueue_gas_fees defines gas fees for different enqueue operations
    EnqueueGasFees enqueue_gas_fees = 2
        [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"enqueue_gas_fees\"" ];
}

// EnqueueGasFees defines the gasFees for the enque message execution.
  message EnqueueGasFees {
    option (gogoproto.equal) = true;

    uint64 delegate = 1 [(gogoproto.moretags) = "yaml:\"delegate\""];
    uint64 undelegate = 2 [(gogoproto.moretags) = "yaml:\"undelegate\""];
    uint64 begin_redelegate = 3 [(gogoproto.moretags) = "yaml:\"begin_redelegate\""];
    uint64 cancel_unbonding_delegation = 4 [(gogoproto.moretags) = "yaml:\"cancel_unbonding_delegation\""];
    uint64 edit_validator = 5 [(gogoproto.moretags) = "yaml:\"edit_validator\""];
    uint64 staking_update_params = 6 [(gogoproto.moretags) = "yaml:\"staking_update_params\""];
    uint64 create_validator = 7 [(gogoproto.moretags) = "yaml:\"create_validator_params\""];
  }